[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/NPCs/qu√≠mico.png" type="Texture" id=1]
[ext_resource path="res://scripts/npc_quimic.gd" type="Script" id=2]
[ext_resource path="res://assets/NPCs/quimico_stroke.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 45.5 )

[node name="npc_quimico" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -19.5 )
shape = SubResource( 1 )

[node name="Stroke" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
flip_h = true

[node name="dialog" type="ColorRect" parent="."]
visible = false
margin_left = -321.0
margin_top = -229.0
margin_right = 51.0
margin_bottom = -91.0

[node name="RichTextLabel" type="RichTextLabel" parent="dialog"]
margin_left = 11.0
margin_top = 9.0
margin_right = 356.0
margin_bottom = 125.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
text = "caixa de texto"
fit_content_height = true

[node name="Button" type="Button" parent="dialog"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 125.0
margin_top = 2.0
margin_right = 373.0
margin_bottom = 137.0

[connection signal="body_entered" from="." to="." method="_on_npc_quimico_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_npc_quimico_body_exited"]
[connection signal="pressed" from="dialog/Button" to="." method="_on_Button_pressed"]
